ya funciona todo falta modificar el api
